<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singuprelativelayout"
    android:background="@drawable/back_ground2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.SignIn">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/dbse_logo"
            style="@style/DbseLogo"
            android:text="@string/DbSE"/>
        <TextView
            android:id="@+id/SignInTitleText"
            style="@style/SignIntextstyle"
            android:text="@string/sign_in_title"
            android:layout_below="@+id/dbse_logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/signinlinearlayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/SignInTitleText">
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:id="@+id/signIn_user_email"
                android:hint="@string/emailORusername"/>
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:id="@+id/signIn_password"
                android:inputType="textPassword"
                android:hint="@string/sign_in_password_hint"/>
            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_centerHorizontal="true"
                android:background="@drawable/roundedborder" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/forget_password_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/signinlinearlayout">
            <TextView
                android:id="@+id/SignIn_SignUp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/fab_margin"
                android:paddingLeft="32dp"
                android:layout_alignParentLeft="true"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:clickable="true"/>
            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_alignParentRight="true"
                android:paddingRight="32dp"
                android:clickable="true"
                android:text="@string/froget_pass"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>
        <ImageView
            android:id="@+id/Facebook_Button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:src="@drawable/facebook_page"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/forget_password_linearlayout"
            android:layout_marginTop="32dp"
            android:clickable="true"/>
    </RelativeLayout>
</ScrollView>
