<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singuprelativelayout"
    android:background="@color/dbsecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.SignUp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register1"
            style="@style/SignUptextstyle"
            android:text="@string/register1"
            />
        <TextView
            android:id="@+id/register2"
            style="@style/SignUptextstyle"
            android:text="@string/register2"
            android:layout_below="@id/register1"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/singuplinearlayout"
            android:layout_below="@id/register2"
            android:layout_centerHorizontal="true"
            >
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:hint="@string/singupusername"
                android:id="@+id/usernameedittext"
                />
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:hint="@string/signupemail"
                android:id="@+id/emailedittext"
                />
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:hint="password (at least 8 ch)"
                android:inputType="textPassword"
                android:id="@+id/passwordedittext" />

        </LinearLayout>
        <Button
            android:id="@+id/next_step"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/singuplinearlayout"
            android:background="@drawable/roundedborder"
            />
        <EditText
            style="@style/edittext_sign_in_up_style"
            android:hint="@string/hint_real_name"
            android:id="@+id/real_user_name_editText"
            android:layout_below="@+id/singuplinearlayout"
            android:visibility="invisible" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/checkboxs_Relativelayout"
            android:layout_below="@id/real_user_name_editText"
            android:layout_centerHorizontal="true">
            <CheckBox
                android:id="@+id/male_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="32dp"
                android:visibility="invisible"
                android:clickable="false"
                android:textColor="@color/white"
                android:text="Male" />
            <CheckBox
                android:id="@+id/female_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/male_checkbox"
                android:visibility="invisible"
                android:clickable="false"
                android:textColor = "@color/white"
                android:text="Female"/>
            <Button
                android:id="@+id/chooseGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="32dp"
                android:text="@string/change"
                android:background="@color/white"
                android:visibility="invisible"
                />

        </RelativeLayout>
        <Button
            android:id="@+id/createaccount_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/createaccount"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/checkboxs_Relativelayout"
            android:background="@drawable/roundedborder"
            android:visibility="invisible"
            android:layout_marginTop="8dp"
            />
    </RelativeLayout>
</ScrollView>
