<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/singuprelativelayout"
    android:background="@color/dbsecolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/editProfileLinearlayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp">
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:id="@+id/real_user_name"
                android:hint="@string/hint_real_name"/>
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:id="@+id/new_username"
                android:hint="@string/new_username"
                android:layout_below="@+id/real_user_name"/>
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:id="@+id/new_email"
                android:hint="@string/new_email"
                android:layout_below="@+id/new_username"/>
            <EditText
                style="@style/edittext_sign_in_up_style"
                android:inputType="textPassword"
                android:id="@+id/new_password"
                android:hint="@string/new_password"
                android:layout_below="@+id/new_email"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/checkboxs_Relativelayout_editProfile"
                android:layout_below="@id/new_password"
                android:layout_centerHorizontal="true">
                <CheckBox
                    android:id="@+id/male_checkbox_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="32dp"
                    android:clickable="false"
                    android:text="Male"
                    android:textColor="@color/white"/>
                <CheckBox
                    android:id="@+id/female_checkbox_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/male_checkbox_editProfile"
                    android:clickable="false"
                    android:text="Female"
                    android:textColor="@color/white"/>
                <Button
                    android:id="@+id/chooseGender_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="32dp"
                    android:text="@string/change"
                    android:background="@color/white"
                    />

            </RelativeLayout>
            <Button
                android:id="@+id/Save_changes_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/save_changes"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/checkboxs_Relativelayout_editProfile"
                android:layout_marginTop="16dp"
                android:background="@drawable/roundedborder"
                />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
